[package]
name = "zilog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zilog"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.71"
colored = "2.0.4"
log = "0.4.19"
log4rs = "1.2.0"
